--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -220,7 +220,7 @@ label[for="player-name-input"] {
     100% { transform: scale(1.16); }
 }
 
-#send-player:hover {
+#send-player:hover, #rabbit-dashboard-btn:hover {
     background-color: #42e342;
     cursor: pointer;
     transform: scale(1.1);
@@ -477,10 +477,51 @@ footer {
     padding-left: 10%;
 }
 
+#rabbit-collection-dashboard {
+    width: 45%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+
+    border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 #rabbit-dashboard-rarity {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.rabbit-dashboard-entry {
+    width: calc(100%/3);
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+}
+
+.rabbit-dashboard-entry input {
+    width: 25px;
+    height: 25px;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+}
+
+#rabbit-dashboard-btn {
+    width: 100px;
+    height: 50px;
+    display: flex;
+    margin: 10px auto 0;
+
+    font-family: "Minecraft", sans-serif;
+    color: white;
+    background-color: #3cd040;
+    border: none;
+    border-radius: 4px;
+    font-size: 12pt;
 }
 
 .parenthesis::before {
@@ -525,6 +566,10 @@ footer {
 
     .divider-2 > div {
         max-height: fit-content;
+    }
+
+    #rabbit-collection-dashboard {
+        width: 80%;
     }
 }
 
@@ -571,6 +616,14 @@ footer {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto
+    }
+
+    #rabbit-collection-dashboard {
+        width: 100%;
+    }
+
+    .rabbit-dashboard-entry {
+        width: 100%;
     }
 }
 
