--- a/templates/info.html
+++ b/templates/info.html
@@ -40,7 +40,8 @@
             <li class="white-text center">Organisations</li>
             <li class="white-text">Hypixel Skyblock Wiki - Information and assets (<a href="https://wiki.hypixel.net/" target="_blank">website</a>)</li>
             <li class="white-text">Minecraft Heads - Assets (<a href="https://minecraft-heads.com/" target="_blank">website</a>)</li>
-            <li class="white-text">Minecraft Fandom Wiki- Assets (<a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki" target="_blank">website</a>)</li>
+            <li class="white-text">Minecraft Fandom Wiki - Assets (<a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki" target="_blank">website</a>)</li>
+            <li class="white-text">Regex101 - Minecraft username regular expression (<a href="https://regex101.com/r/jM0zH5/1" target="_blank">website</a>)</li>
         </ul>
         <br>
     </div>
