fix(rabbit-dashboard): Added a new form to sort rabbit by "found" criteria

--- a/src/templates/assets/stylesheet/style.css
+++ b/src/templates/assets/stylesheet/style.css
@@ -490,7 +490,7 @@ footer {
     padding-bottom: 10px;
 }
 
-#rabbit-dashboard-rarity {
+#rabbit-dashboard-rarity, #rabbit-dashboard-found {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
