fix(skills): Added the skill average in the skills section. Although it's currently inaccurate because the taming level cap isn't taken into account.

--- a/src/templates/assets/stylesheet/style.css
+++ b/src/templates/assets/stylesheet/style.css
@@ -258,7 +258,7 @@ footer {
 }
 
 .white-text, .section-title,
-.stats-div > *, #profile-selector {
+.stats-div > *:not(p), #profile-selector {
     color: white;
     text-shadow: #000000 1px 0 10px;
 }
