feat(meta-tags): Added meta tags for better external embedding

--- a/src/templates/info.html
+++ b/src/templates/info.html
@@ -42,6 +42,7 @@
             <li class="white-text">Minecraft Heads - Assets (<a href="https://minecraft-heads.com/" target="_blank">website</a>)</li>
             <li class="white-text">Minecraft Fandom Wiki - Assets (<a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki" target="_blank">website</a>)</li>
             <li class="white-text">Regex101 - Minecraft username regular expression (<a href="https://regex101.com/r/jM0zH5/1" target="_blank">website</a>)</li>
+            <li class="white-text">Metatags.io - Meta tags first draft (<a href="https://metatags.io" target="_blank">website</a>)</li>
         </ul>
         <br>
     </div>
