fix(meta-tags): Added meta tags on home page and Info page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,6 +6,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/images/favicon.png">
 	<link href="/style/style.css" rel="stylesheet">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="SkyblockStats - Home">
+    <meta name="description" content="SkyblockStats aims to provide a user-friendly interface to the Hypixel API with an elegant website.">
+    <meta property="og:image" content="https://sbs.gabhas.fr/images/favicon.png">
+
+    <!-- Open Graph & Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sbs.gabhas.fr/" >
+    <meta property="og:title" content="SkyblockStats - Home">
+    <meta property="og:description" content="SkyblockStats aims to provide a user-friendly interface to the Hypixel API with an elegant website.">
+    <meta property="og:image" content="https://sbs.gabhas.fr/images/favicon.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sbs.gabhas.fr/">
+    <meta property="twitter:title" content="SkyblockStats aims to provide a user-friendly interface to the Hypixel API with an elegant website.">
+    <meta property="twitter:image" content="https://sbs.gabhas.fr/images/favicon.png">
 </head>
 <body>
 <div id="video-container">
