--- a/src/templates/stats.html
+++ b/src/templates/stats.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>{{ player_name }} | SBStats</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
 	<link rel="icon" href="{{ skin_link }}">
     <link href="/style/style.css" rel="stylesheet">
     <link href="/style/tooltip.css" rel="stylesheet">
