fix(chocolate-factory): Rabbits that haven't been found are now hidden by default

--- a/src/templates/components/chocolate-factory.html
+++ b/src/templates/components/chocolate-factory.html
@@ -272,7 +272,7 @@
         </div>
         <div class="rabbit-dashboard-entry">
             <label class="text-shadow bold color-7">
-                <input type="checkbox" checked id="not-found-rabbit"> Not Found
+                <input type="checkbox" id="not-found-rabbit"> Not Found
             </label>
         </div>
     </form>
