fix(chocolate-factory): Adjusted the value of the Rabbit Shrine bonus after a game update

--- a/src/templates/components/chocolate-factory.html
+++ b/src/templates/components/chocolate-factory.html
@@ -140,7 +140,7 @@
                 </span>
                 {% if chocolate_data['upgrades']['shrine'] > 0 %}
                     <i class="parenthesis color-7">
-                        +{{ chocolate_data['upgrades']['shrine'] }}% to find rare rabbits
+                        +{{ chocolate_data['upgrades']['shrine'] * 2 }}% to find rare rabbits
                     </i>
                 {% endif %}
             </p>
