--- a/src/templates/assets/stylesheet/style.css
+++ b/src/templates/assets/stylesheet/style.css
@@ -524,6 +524,27 @@ footer {
     font-size: 12pt;
 }
 
+#rabbit-repartition {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+}
+
+#rabbit-repartition-bar {
+    height: 25px;
+    width: 95%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+#rabbit-repartition > p {
+}
+
+#rabbit-repartition-bar > div {
+    position: absolute;
+    height: 25px;
+}
+
 #jacob-stats .divider-2 > div {
     padding-top: 10px;
     padding-bottom: 10px;
