--- a/src/templates/assets/stylesheet/style.css
+++ b/src/templates/assets/stylesheet/style.css
@@ -277,6 +277,21 @@ footer {
     padding-left: 10px;
 }
 
+#navbar[role="navigation"] {
+    width: 80%;
+    margin: 10px 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#navbar[role="navigation"] .nav-btn {
+    border-radius: 5px;
+    padding: 10px;
+    margin: 2px;
+}
+
 #skills-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
