fix(style): minor CSS changes

--- a/src/templates/components/skills.html
+++ b/src/templates/components/skills.html
@@ -1,4 +1,4 @@
-<p class="color-b center">
+<p class="color-b center text-shadow">
     Skill average
     <span class="bold color-f">: {{ leveling_data['Global']['skill_average'] }}</span>
 </p>
