--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -29,7 +29,7 @@
 <div id="video-container">
 	<video id="background-video" playsinline autoplay muted loop>
 		<source src="/video/background.mp4" type="video/mp4">
-		Your browser does not support the video tag.
+		Your browser does not support the video.
 	</video>
 </div>
 <div class="flex-wrapper">
